application/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: schema-service
  labels:
    app: schema-interface
spec:
  type: LoadBalancer 
  selector:
    app: rest-server
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
